--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <html>
   <head>
     <title>Welcome!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='styles.css'/>
   </head>
 <body>
+  <div class="dropdown">
+  <span>Mouse over me</span>
+  <div class="dropdown-content">
+    <p>About</p>
+     <p>Projects</p>
+      <p>Reach Me</p>
+
+  </div>
+</div>
   <h1>Emma says...</h1>
   <h2>Hello World!</h2>
-  <p>Hello outer space</p>
+  <p>About Emma</p>
+  <p>Project 1</p>
+  <p>Project 2</p>
+  <p>Project 3</p>
+
 </body>
 </html>
 
+<!-- https://em-cotter.github.io/website/ -->
