--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <html>
   <head>
-    <title>Welcome!</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='styles.css'/>
   </head>
 <body>
   <div class="dropdown">
-  <span>Mouse over me</span>
+  <div class="topline">Mouse over me</div>
   <div class="dropdown-content">
-    <p>About</p>
-     <p>Projects</p>
-      <p>Reach Me</p>
+    <p class="content">About</p>
+     <p class="content">Projects</p>
+      <p class="content">Reach Me</p>
 
   </div>
+
 </div>
   <h1>Emma says...</h1>
-  <h2>Hello World!</h2>
   <p>About Emma</p>
-  <p>Project 1</p>
-  <p>Project 2</p>
+  <hr>
+  <h2>Aus Code wird Kunst</h2>
+  <p>Hier zu sehen sind p5 sketches die im Zusammenhang mit dem Kurs Generative Gestaltung entstanden sind.</p>
+  <hr>
+  <h2>Textadventure</h2>
+  <p>Es weihnachtet sehr</p>
+  <hr>
   <p>Project 3</p>
+  <hr>
 
 </body>
 </html>
