--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,25 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='styles.css'/>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 <body>
+
   <div class="dropdown">
-  <div class="topline">Mouse over me</div>
+  <button class="dropbtn"><i class="fa fa-bars"></i></button>
   <div class="dropdown-content">
-    <p class="content">About</p>
-     <p class="content">Projects</p>
-      <p class="content">Reach Me</p>
-
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
   </div>
-
 </div>
-  <h1>Emma says...</h1>
-  <p>About Emma</p>
+
+  <div class="hero-image" >
+  <div class="hero-text">
+    <h1>Emma Cotter</h1>
+    <button class="herobtn">Contact Me</button>
+  </div>
+</div>
   <hr>
   <h2>Aus Code wird Kunst</h2>
   <p>Hier zu sehen sind p5 sketches die im Zusammenhang mit dem Kurs Generative Gestaltung entstanden sind.</p>
