Boxes for generative gestaltung

--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,89 @@
 <html>
   <head>
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel='stylesheet' href='styles.css'/>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,200;0,300;0,500;1,100;1,200;1,400&display=swap"
+      rel="stylesheet"
+    />
   </head>
-<body>
+  <body>
+    <div class="dropdown">
+      <button class="dropbtn"><i class="fa fa-bars"></i></button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
 
-  <div class="dropdown">
-  <button class="dropbtn"><i class="fa fa-bars"></i></button>
-  <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-</div>
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1>Emma Cotter</h1>
+        <button class="herobtn">Contact Me</button>
+      </div>
+    </div>
+    <hr />
+    <h2>Aus Code wird Kunst</h2>
+    <p>
+      Hier zu sehen sind p5 sketches die im Zusammenhang mit dem Kurs Generative
+      Gestaltung entstanden sind.
+    </p>
+    <hr />
 
-  <div class="hero-image" >
-  <div class="hero-text">
-    <h1>Emma Cotter</h1>
-    <button class="herobtn">Contact Me</button>
-  </div>
-</div>
-  <hr>
-  <h2>Aus Code wird Kunst</h2>
-  <p>Hier zu sehen sind p5 sketches die im Zusammenhang mit dem Kurs Generative Gestaltung entstanden sind.</p>
-  <hr>
-  <h2>Textadventure</h2>
-  <p>Es weihnachtet sehr</p>
-  <hr>
-  <p>Project 3</p>
-  <hr>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img class=" src="" alt="">
+          <div class="container">
+            <h3>Sketch 1</h3>
+            <p>jdjskslks</p>
+            <a href="">view sketch</a>
+          </div>
+        </div>
+      </div>
 
-</body>
+      <div class="column">
+        <div class="card">
+          <img class=" src="" alt="">
+          <div class="container">
+            <h3>Sketch 1</h3>
+            <p>jdjskslks</p>
+            <a href="">view sketch</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img class=" src="" alt="">
+          <div class="container">
+            <h3>Sketch 1</h3>
+            <p>jdjskslks</p>
+            <a href="">view sketch</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2>Textadventure</h2>
+    <p>Es weihnachtet sehr</p>
+    <hr />
+    <p>Project 3</p>
+    <hr />
+  </body>
 </html>
 
 <!-- https://em-cotter.github.io/website/ -->
