--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img class=" src="" alt="">
+          <img class="" src="ComputerStrokes.jpg" alt="">
           <div class="container">
             <h3>Sketch 1</h3>
             <p>jdjskslks</p>
@@ -57,9 +57,9 @@
 
       <div class="column">
         <div class="card">
-          <img class=" src="" alt="">
+          <img class="" src="Layers_of_dots.jpg" alt="">
           <div class="container">
-            <h3>Sketch 1</h3>
+            <h3>Sketch 2</h3>
             <p>jdjskslks</p>
             <a href="">view sketch</a>
           </div>
@@ -68,9 +68,9 @@
 
       <div class="column">
         <div class="card">
-          <img class=" src="" alt="">
+          <img class="" src="Mitosis.jpg" alt="">
           <div class="container">
-            <h3>Sketch 1</h3>
+            <h3>Sketch 3</h3>
             <p>jdjskslks</p>
             <a href="">view sketch</a>
           </div>
