links für generative gestaltungs sketche

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           <div class="container">
             <h3>Sketch 1</h3>
             <p>jdjskslks</p>
-            <a href="">view sketch</a>
+            <a href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-punkt-linie-flaeche/" target="blank">view sketch</a>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
           <div class="container">
             <h3>Sketch 2</h3>
             <p>jdjskslks</p>
-            <a href="">view sketch</a>
+            <a href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-farbe/" target=”_blank”>view sketch</a>
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
           <div class="container">
             <h3>Sketch 3</h3>
             <p>jdjskslks</p>
-            <a href="">view sketch</a>
+            <a href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-freie-arbeit/" target="_blank">view sketch</a>
           </div>
         </div>
       </div>
