dropdown with working links

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
     <div class="dropdown">
       <button class="dropbtn"><i class="fa fa-bars"></i></button>
       <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="#generativeGestaltung">Generative Gestaltung</a>
+        <a href="#textadventure">Textadventure</a>
+        <a href="#me">About Me</a>
       </div>
     </div>
 
@@ -36,7 +36,7 @@
       </div>
     </div>
     <hr />
-    <h2>Aus Code wird Kunst</h2>
+    <h2 id="generativeGestaltung">Aus Code wird Kunst</h2>
     <p>
       Hier zu sehen sind p5 sketches die im Zusammenhang mit dem Kurs Generative
       Gestaltung entstanden sind.
@@ -78,10 +78,11 @@
       </div>
     </div>
 
-    <h2>Textadventure</h2>
+    <h2 id="textadventure">Textadventure</h2>
     <p>Es weihnachtet sehr</p>
     <hr />
-    <p>Project 3</p>
+    <h2 id="me">About Me</h2>
+    <p></p>
     <hr />
   </body>
 </html>
