updated path for images

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img class="" src="ComputerStrokes.jpg" alt="">
+          <img class="" src="src/ComputerStrokes.jpg" alt="">
           <div class="container">
             <h3>Sketch 1</h3>
             <p>jdjskslks</p>
@@ -57,7 +57,7 @@
 
       <div class="column">
         <div class="card">
-          <img class="" src="Layers_of_dots.jpg" alt="">
+          <img class="" src="src/Layers_of_dots.jpg" alt="">
           <div class="container">
             <h3>Sketch 2</h3>
             <p>jdjskslks</p>
@@ -68,7 +68,7 @@
 
       <div class="column">
         <div class="card">
-          <img class="" src="Mitosis.jpg" alt="">
+          <img class="" src="src/Mitosis.jpg" alt="">
           <div class="container">
             <h3>Sketch 3</h3>
             <p>jdjskslks</p>
