textadventure jar and instructions

--- a/index.html
+++ b/index.html
@@ -80,6 +80,38 @@
 
     <h2 id="textadventure">Textadventure</h2>
     <p>Es weihnachtet sehr</p>
+     <a href="src/text-adventure Kopie.jar" download="Textadventure">
+        <button type="button" class="textadventureButton">Download Textadventure as .jar</button>
+    </a>
+    <p>In diesem Adventure besteht die Challenge darin, den Weihnachtsbaum festlich zu schmücken.
+Um zu gewinnen muss der Baum am richtigen Ort stehen und das Haus nach der Dekoration durchsucht werden.
+Mögliche Befehle:
+
+<hr>
+
+n :  go north
+
+<hr>
+s :  go south
+<hr>
+w :  go west
+<hr>
+
+e :  go east
+
+<hr>
+t/ take
+
+<hr>
+d/ drop
+
+<hr>
+u/ use
+
+<hr>
+
+i/ inventory
+</p>
     <hr />
     <h2 id="me">About Me</h2>
     <p></p>
