styling btn texardventure

--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
 
     <h2 id="textadventure">Textadventure</h2>
     <p>Es weihnachtet sehr</p>
-     <a href="src/text-adventure Kopie.jar" download="Textadventure">
+    <p class="textadventureParent" > 
+      <a href="src/text-adventure Kopie.jar" download="Textadventure" >
         <button type="button" class="textadventureButton">Download Textadventure as .jar</button>
-    </a>
+    </a></p>
+    
     <p>In diesem Adventure besteht die Challenge darin, den Weihnachtsbaum festlich zu schmücken.
 Um zu gewinnen muss der Baum am richtigen Ort stehen und das Haus nach der Dekoration durchsucht werden.
 Mögliche Befehle:
