trying to fix pipleine, excluded icon

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <link
+   <!--  <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,8 @@
   </head>
   <body>
     <div class="dropdown">
-      <button class="dropbtn"><i class="fa fa-bars"></i></button>
+      <button class="dropbtn"></button> 
+      <!-- <i class="fa fa-bars"></i> -->
       <div class="dropdown-content">
         <a href="#generativeGestaltung">Generative Gestaltung</a>
         <a href="#textadventure">Textadventure</a>
