changed dropdown btn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/styles.css" />
-   <!--  <link
+    <!--  <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     /> -->
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="dropdown">
-      <button class="dropbtn"></button> 
+      <button class="dropbtn">...</button>
       <!-- <i class="fa fa-bars"></i> -->
       <div class="dropdown-content">
         <a href="#generativeGestaltung">Generative Gestaltung</a>
@@ -47,77 +47,99 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img class="" src="src/ComputerStrokes.jpg" alt="">
+          <img class="" src="src/ComputerStrokes.jpg" alt="" />
           <div class="container">
             <h3>Sketch 1</h3>
             <p>jdjskslks</p>
-            <a href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-punkt-linie-flaeche/" target="blank">view sketch</a>
+            <a
+              href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-punkt-linie-flaeche/"
+              target="blank"
+              >view sketch</a
+            >
           </div>
         </div>
       </div>
 
       <div class="column">
         <div class="card">
-          <img class="" src="src/Layers_of_dots.jpg" alt="">
+          <img class="" src="src/Layers_of_dots.jpg" alt="" />
           <div class="container">
             <h3>Sketch 2</h3>
             <p>jdjskslks</p>
-            <a href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-farbe/" target=”_blank”>view sketch</a>
+            <a
+              href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-farbe/"
+              target="”_blank”"
+              >view sketch</a
+            >
           </div>
         </div>
       </div>
 
       <div class="column">
         <div class="card">
-          <img class="" src="src/Mitosis.jpg" alt="">
+          <img class="" src="src/Mitosis.jpg" alt="" />
           <div class="container">
             <h3>Sketch 3</h3>
             <p>jdjskslks</p>
-            <a href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-freie-arbeit/" target="_blank">view sketch</a>
+            <a
+              href="https://ecotter.pages.coco.study/gestaltungsportfolio-ws-202223-emma-cotter/result-freie-arbeit/"
+              target="_blank"
+              >view sketch</a
+            >
           </div>
         </div>
       </div>
     </div>
 
+    <div class="textadventureContainer">
     <h2 id="textadventure">Textadventure</h2>
     <p>Es weihnachtet sehr</p>
-    <p class="textadventureParent" > 
-      <a href="src/text-adventure Kopie.jar" download="Textadventure" >
-        <button type="button" class="textadventureButton">Download Textadventure as .jar</button>
-    </a></p>
-    
-    <p>In diesem Adventure besteht die Challenge darin, den Weihnachtsbaum festlich zu schmücken.
-Um zu gewinnen muss der Baum am richtigen Ort stehen und das Haus nach der Dekoration durchsucht werden.
-Mögliche Befehle:
+    <p class="textadventureParent">
+      <a href="src/text-adventure Kopie.jar" download="Textadventure">
+        <button type="button" class="textadventureButton">
+          Download Textadventure as .jar
+        </button>
+      </a>
+    </p>
 
-<hr>
+    <p>
+      In diesem Adventure besteht die Challenge darin, den Weihnachtsbaum
+      festlich zu schmücken. Um zu gewinnen muss der Baum am richtigen Ort
+      stehen und das Haus nach der Dekoration durchsucht werden. Mögliche
+      Befehle:
+    </p>
 
-n :  go north
+   <!--  <div class="instructions">
+      <hr />
 
-<hr>
-s :  go south
-<hr>
-w :  go west
-<hr>
+      n : go north
 
-e :  go east
+      <hr />
+      s : go south
+      <hr />
+      w : go west
+      <hr />
 
-<hr>
-t/ take
+      e : go east
 
-<hr>
-d/ drop
+      <hr />
+      t/ take
 
-<hr>
-u/ use
+      <hr />
+      d/ drop
 
-<hr>
+      <hr />
+      u/ use
 
-i/ inventory
-</p>
-    <hr />
+      <hr />
+
+      i/ inventory
+
+      <hr />
+    </div> -->
+</div>
     <h2 id="me">About Me</h2>
-    <p></p>
+    <p>jhhh</p>
     <hr />
   </body>
 </html>
