--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
       </div>
     </div>
     <hr />
-    <h2 id="generativeGestaltung">Aus Code wird Kunst</h2>
-    <p>
+    <div class="containerGenerativ">
+    <h2 id="generativeGestaltung" class="h2Generativ">Aus Code wird Kunst</h2>
+    <p class="textGenerativ">
       Hier zu sehen sind p5 sketches die im Zusammenhang mit dem Kurs Generative
       Gestaltung entstanden sind.
     </p>
+    </div>
     <hr />
 
     <div class="row">
@@ -102,7 +104,7 @@
       </a>
     </p>
 
-    <p>
+    <p class="textTextadventure">
       In diesem Adventure besteht die Challenge darin, den Weihnachtsbaum
       festlich zu schmücken. Um zu gewinnen muss der Baum am richtigen Ort
       stehen und das Haus nach der Dekoration durchsucht werden. Mögliche
