using opscity to divide, not finished

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </div>
     </div>
     <hr />
+    <div class="BlockGenerativ">
     <div class="containerGenerativ">
     <h2 id="generativeGestaltung" class="h2Generativ">Aus Code wird Kunst</h2>
     <p class="textGenerativ">
@@ -92,10 +93,11 @@
         </div>
       </div>
     </div>
-
-    <div class="textadventureContainer">
-    <h2 id="textadventure">Textadventure</h2>
-    <p>Es weihnachtet sehr</p>
+</div>
+<div class="BlockTextadventure">
+    
+    <h2 id="textadventure" class="h2textadventure">Textadventure - Es weihnachtet sehr</h2>
+   
     <p class="textadventureParent">
       <a href="src/text-adventure Kopie.jar" download="Textadventure">
         <button type="button" class="textadventureButton">
@@ -107,8 +109,7 @@
     <p class="textTextadventure">
       In diesem Adventure besteht die Challenge darin, den Weihnachtsbaum
       festlich zu schmücken. Um zu gewinnen muss der Baum am richtigen Ort
-      stehen und das Haus nach der Dekoration durchsucht werden. Mögliche
-      Befehle:
+      stehen und das Haus nach der Dekoration durchsucht werden. 
     </p>
 
    <!--  <div class="instructions">
@@ -139,10 +140,13 @@
 
       <hr />
     </div> -->
+
 </div>
+<div class="BlockMe">
     <h2 id="me">About Me</h2>
     <p>jhhh</p>
     <hr />
+    </div>
   </body>
 </html>
 
