--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="herobtn">Contact Me</button>
       </div>
     </div>
-    <hr />
+
     <div class="BlockGenerativ">
     <div class="containerGenerativ">
     <h2 id="generativeGestaltung" class="h2Generativ">Aus Code wird Kunst</h2>
@@ -94,6 +94,7 @@
       </div>
     </div>
 </div>
+<hr/ class="divider">
 <div class="BlockTextadventure">
     
     <h2 id="textadventure" class="h2textadventure">Textadventure - Es weihnachtet sehr</h2>
@@ -142,6 +143,7 @@
     </div> -->
 
 </div>
+<hr/ class="divider">
 <div class="BlockMe">
     <h2 id="me">About Me</h2>
     <p>jhhh</p>
