Added about me text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Portfolio</title>
+    <script src="script.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -33,7 +34,7 @@
     <div class="hero-image">
       <div class="hero-text">
         <h1>Emma Cotter</h1>
-        <button class="herobtn">Contact Me</button>
+        
       </div>
     </div>
 
@@ -146,7 +147,7 @@
 <hr/ class="divider">
 <div class="BlockMe">
     <h2 id="me">About Me</h2>
-    <p>jhhh</p>
+    <p>Hi there, my name is Emma Cotter and I am currently a Student at the Technical University in Cologne. The bachelor’s course I attend is called “Code & Context” and focuses on project orientated teaching. My studies focus on Computer Programming, Entrepreneurship and Design, specifically emphasising the areas in which these intertwine.  </p>
     <hr />
     </div>
   </body>
