--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>Portfolio</title>
-    <script src="script.js"></script>
+    <title>Emma Cotter</title>
+    
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
